# europa-firmware

./: CMakeLists.txt  README.md  main.cpp  platformio.ini
include/: control.h  core.h  datalogging.h  kalman.h  mmath.h  navigation.h  perif_ctrl.h  physics.h  simulation.h  state_ctrl.h  task.h  telemetry.h
include/drivers/: bmp581.h  buzzer.h  core_interface.h  flash.h  gps.h  lis2mdl.h  lsm6dso32.h  pca9685.h  perif_ctrl.h  pins.h  radio.h  servo.h  ws2812.pio.h
src/: main.cpp
